# recipebook

./: Dockerfile  LICENSE  README.md  advent_of_code_day1.py  advent_of_code_day14.py  advent_of_code_day15.py  advent_of_code_day16.py  advent_of_code_day2.py  docker-compose.yml  pyproject.toml
core/: admin.py  models.py
core/management/commands/: wait_for_db.py
core/migrations/: 0001_initial.py  0002_tag.py  0003_ingredient.py  0004_recipe.py
core/tests/: test_admin.py  test_commands.py  test_models.py
recipe/: serializers.py  urls.py  views.py
recipe/tests/: test_ingredients_api.py  test_recipe_api.py  test_tags_api.py
recipe_book/: settings.py  urls.py
tests/: test_recipebook.py
user/: serializers.py  views.py
user/tests/: test_users_api.py
